--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="jumbotron">
         <div class="container">
             <ul id="lists"></ul>
+            <p id="display_fetch"></p>
         </div>
     </div>
 
@@ -27,8 +28,9 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <!-- <script type="text/javascript" src="callback.js"></script> -->
-    <script type="text/javascript" src="promise.js"></script>
+    <!-- <script type="text/javascript" src="promise.js"></script> -->
     <!-- <script type="text/javascript" src="async_await.js"></script> -->
+    <script type="text/javascript" src="fetch_example.js"></script>
 </body>
 
 </html>
